--- a/debian/control
+++ b/debian/control
@@ -381,6 +381,21 @@ Description: NVIDIA runtime compiler library (32-bit)
  .
  This package contains the runtime compiler library (32-bit).
 
+Package: libnvcuvid1
+Architecture: i386 amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA CUDA nvcuvid runtime library
+ The Compute Unified Device Architecture (CUDA) enables NVIDIA
+ graphics processing units (GPUs) to be used for massively parallel
+ general purpose computation.
+ .
+ nvcuvid provides a mechanism for decoding video and exposing the surfaces to
+ CUDA, allowing applications to perform custom processing of the video.
+ nvcuvid is primarily targeted at transcoding and video-processing
+ applications.
+ .
+ This package contains the nvcuvid runtime library.
+
 Package: nvidia-opencl-common
 Architecture: i386 amd64
 Depends: ${misc:Depends},
