add a rule to reformat LICENSE to match debian/copyright to simplify checking for changes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1649 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -241,6 +241,11 @@ pci.ids.nvidia: /usr/share/misc/pci.ids
 		grep ^$$id pci.ids.nvidia || echo $$id ; \
 	done > $@
 
+# only invoked manually
+LICENSE.txt: NVIDIA-Linux/LICENSE
+	sed -e 's/^ *//; s/ *$$//; s/^$$/./; s/^/ /;' $< > $@
+
+
 # Renaming control files for legacy packaging
 ifneq (,$(legacy))
 nvidia-glx$(legacy)%: nvidia-glx%
