add a pre-install hook for the nvidia-installer, trying to prevent its usage while Debian NVIDIA driver packages are installed
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1681 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -86,6 +86,7 @@ override_dh_clean:
 	$(MAKE) -f debian/rules $(AUTOKEEP)
 
 override_dh_auto_configure: prepare
+	chmod +x debian/pre-install
 
 # Build two kernel module source tarballs for use with
 #  - module-assistant and make-kpkg
