--- a/debian/rules
+++ b/debian/rules
@@ -82,6 +82,7 @@ override_dh_auto_clean:
 
 override_dh_clean:
 	dh_clean
+	debconf-updatepo
 	rm -f $(AUTOCLEAN)
 	$(MAKE) -f debian/rules $(AUTOKEEP)
 
