add libnvidia-ml1 package for the nvidia management library (NVML)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/270-beta@1728 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -395,6 +395,15 @@ Description: NVIDIA CUDA nvcuvid runtime library
  .
  This package contains the nvcuvid runtime library.
 
+Package: libnvidia-ml1
+Architecture: i386 amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA management library (NVML) runtime library
+ FIXME! NVML is the library version of nvidia-smi, some management and health
+ monitoring utility for the TESLA platform
+ .
+ This package contains the nvidia-ml runtime library.
+
 Package: nvidia-opencl-common
 Architecture: i386 amd64
 Depends: ${misc:Depends},
