--- a/debian/control
+++ b/debian/control
@@ -89,6 +89,7 @@ Description: NVIDIA binary driver 32-bit libs${nvidia:LegacyDesc}
 
 Package: libgl1-nvidia-glx
 Architecture: i386 amd64
+Pre-Depends: nvidia-common
 Depends:
  libgl1-nvidia-alternatives,
  ${shlibs:Depends}, ${misc:Depends}
@@ -124,7 +125,7 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
 Package: libgl1-nvidia-glx-ia32
 Priority: extra
 Architecture: amd64
-Pre-Depends: libc6-i386 (>= 2.9-18)
+Pre-Depends: libc6-i386 (>= 2.9-18), nvidia-common
 Depends:
  libgl1-nvidia-alternatives-ia32,
  ${shlibs:Depends}, ${misc:Depends}
@@ -225,6 +226,7 @@ Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
 
 Package: nvidia-vdpau-driver
 Architecture: i386 amd64
+Pre-Depends: nvidia-common
 Depends: libvdpau1,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}
@@ -256,7 +258,7 @@ Description: NVIDIA vdpau driver
 Package: nvidia-vdpau-driver-ia32
 Priority: extra
 Architecture: amd64
-Pre-Depends: libc6-i386 (>= 2.9-18)
+Pre-Depends: libc6-i386 (>= 2.9-18), nvidia-common
 Depends: lib32vdpau1,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends: nvidia-kernel-${nvidia:Version}${nvidia:Perfkit}
