Provide xorg-driver-video.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1767 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -34,6 +34,8 @@ Suggests: nvidia-settings,
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
  nvidia-glx,
+ xorg-driver-video,
+# for squeeze-backports add xserver-xorg-video-6
 Conflicts:
  nvidia-glx,
  nvidia-glx-legacy,
