--- a/debian/control
+++ b/debian/control
@@ -43,6 +43,8 @@ Conflicts:
  nvidia-glx-legacy-96xx,
  nvidia-glx-legacy-173xx,
  fglrx-driver,
+Breaks:
+ libgl1-nvidia${nvidia:Legacy}-glx-ia32 (<< ${nvidia:Version}) [amd64],
 Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  These binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
@@ -112,6 +114,8 @@ Conflicts:
  nvidia-glx-legacy-173xx,
  libgl1-nvidia${nvidia:Legacy}-dev,
  nvidia-glx${nvidia:Legacy}-dev,
+Breaks:
+ libgl1-nvidia${nvidia:Legacy}-glx-ia32 (<< ${nvidia:Version}) [amd64],
 Replaces:
  nvidia-glx${nvidia:Legacy} (<< 195.36.31),
  libgl1-nvidia${nvidia:Legacy}-dev,
@@ -146,6 +150,8 @@ Conflicts:
  nvidia-glx-legacy-71xx-ia32,
  nvidia-glx-legacy-96xx-ia32,
  nvidia-glx-legacy-173xx-ia32,
+Breaks:
+ libgl1-nvidia${nvidia:Legacy}-glx (<< ${nvidia:Version}),
 Replaces: nvidia-glx${nvidia:Legacy}-ia32 (<< 195.36.31)
 Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
  These binary 32-bit libraries provide optimized hardware acceleration of
