Update lintian-overrides to work with lintian 2.5.0.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1791 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,4 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
+#!amd64#libcuda1: embedded-library usr/lib/libcuda.so.#VERSION#: libm
 libcuda1: shlib-with-executable-stack
 #!amd64#libcuda1: shlib-with-non-pic-code
 libcuda1: unstripped-binary-or-object
