--- a/debian/libcuda1-ia32.lintian-overrides.in
+++ b/debian/libcuda1-ia32.lintian-overrides.in
@@ -1,4 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
+libcuda1-ia32: embedded-library usr/lib32/libcuda.so.#VERSION#: libm
 libcuda1-ia32: shlib-with-executable-stack
 libcuda1-ia32: shlib-with-non-pic-code
 libcuda1-ia32: unstripped-binary-or-object
