--- a/debian/nvidia-glx.lintian-overrides.in
+++ b/debian/nvidia-glx.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
-nvidia-glx#LEGACY#: embedded-libpng ./usr/lib/xorg/modules/drivers/nvidia_drv.so
-nvidia-glx#LEGACY#: embedded-zlib ./usr/lib/xorg/modules/drivers/nvidia_drv.so
+nvidia-glx#LEGACY#: embedded-library usr/lib/xorg/modules/drivers/nvidia_drv.so: zlib
+nvidia-glx#LEGACY#: embedded-library usr/lib/xorg/modules/drivers/nvidia_drv.so: libpng
 
 # The alternatives are placed here.
 nvidia-glx#LEGACY#: package-contains-empty-directory usr/lib/xorg/modules/extensions/
